# fullstack-develop-example-at-django-nuxtjs

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/api/hello/: urls.py  views.py
backend/api/hello_db/: models.py  urls.py  views.py
backend/api/hello_db/migrations/: 0001_initial.py
backend/api/inventory/: authentication.py  exception.py  models.py  serializers.py  urls.py  views.py
backend/api/inventory/migrations/: 0001_initial.py  0002_purchase_sales.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
frontend/: Dockerfile  backend
frontend/fullstack-develop-example-at-django-nuxtjs/: nuxt.config.ts  package-lock.json  package.json
frontend/fullstack-develop-example-at-django-nuxtjs/pages/: hello.vue  hello_backend.vue  hello_backend_db.vue  hello_frontend_ref.vue  index.vue
frontend/fullstack-develop-example-at-django-nuxtjs/pages/products/: index.vue
